crates/qubit-macros/tests/ui/handler-output-subscription-no-output.rs
use qubit_macros::handler;

#[handler(subscription)]
async fn my_handler() {}

fn main() {}
